# ticker

./: Makefile  index.html  ticker.cabal
src/: Ticker.hs  main.hs
src/Ticker/: Investors.hs
