name: ticket
version: 0.0.0
license: MIT
author: David Hinkes
build-type: Simple
cabal-version: >= 1.2

executable ticker
  main-is: main.hs
  hs-source-dirs: src
  build-depends: base,
                 random,
                 containers,
                 mtl,
                 json,
                 enumerator, utf8-string, blaze-builder, http-types, warp, wai, case-insensitive, bytestring, text
  ghc-options: -O2 -Wall
